Fix incompatible java options in Kafka
Change-Id: I84d34680ec2982f9543d274375bdd0fc98889b51